# godot-cpp-extensions

./: .gitignore  add_gen_files.py  binding_generator.py  dump.json  meson.build  sample-init.cpp  sample-script.cpp  sample-script.gd  sample-script.hpp
godot-headers/: extension_api.json  gdnative_interface.h
src/: godot.cpp  godot.hpp
src/classes/: ref.hpp  wrapped.hpp
src/core/: binder_common.hpp  builtin_ptrcall.hpp  class_db.cpp  class_db.hpp  defs.hpp  engine_ptrcall.hpp  error_macros.cpp  error_macros.hpp  memory.cpp  memory.hpp  method_bind.cpp  method_bind.hpp  method_ptrcall.hpp  object.cpp  object.hpp  type_info.hpp  variant.cpp  variant.hpp
src/variant/: char_string.cpp  char_string.hpp  variant.cpp  variant.hpp
